--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,7 +62,9 @@ dependencies {
     implementation 'androidx.compose.material3:material3'
     implementation 'androidx.constraintlayout:constraintlayout-compose:1.0.1'
     implementation platform('androidx.compose:compose-bom:2022.10.00')
-    implementation 'androidx.core:core-ktx:1.7.20' //OJO
+    implementation 'androidx.core:core-ktx:1.7.20'
+    implementation 'androidx.recyclerview:recyclerview:1.2.1'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'//OJO
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1@aar'
