--- a/app/build.gradle
+++ b/app/build.gradle
@@ -84,6 +84,10 @@ dependencies {
     //prefs
     implementation "androidx.preference:preference-ktx:1.2.0"
 
+    // Preferences DataStore (SharedPreferences like APIs)
+    implementation("androidx.datastore:datastore-preferences:1.0.0")
+    implementation("androidx.datastore:datastore-preferences-core:1.0.0")
+
 
     androidTestImplementation platform('androidx.compose:compose-bom:2022.10.00')
     androidTestImplementation 'androidx.compose.ui:ui-test-junit4'
